--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "is-type-of": "^1.2.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
+    "request": "^2.87.0",
     "request-ip": "^2.1.1",
     "request-promise": "^4.2.2"
   },
